# loco-protocol-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  loco-packet-generator.c  loco-packet-generator.h  loco-protocol-cxx.c  loco-protocol-cxx.h  strgen.c  strgen.h
methods/: getconf.c  getconf.h
test/: CMakeLists.txt  packet_deandserialize.c
test/protocol-test/: packet_deandserialize.c
test/strgen-test/: CMakeLists.txt  strgen_test.c
